# echo-mcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  claude_desktop_config.json  config.py  main.py  pyproject.toml  test_config.json
.cursor/: mcp.json
src/echo_mcp/: config.py  main.py
