[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-mcp"
version = "0.1.0"
description = "A powerful MCP server for local system automation and browser control"
readme = "README.md"
authors = [
    { name = "PyAuto Author", email = "author@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "pyautogui",
    "opencv-python",
    "pillow",
    "pygetwindow",
    "pytesseract",
    "requests",
    "selenium",
    "webdriver-manager",
    "psutil",
    "pyperclip",
]

[project.scripts]
echo-mcp = "echo_mcp.main:main"

[project.urls]
Homepage = "https://github.com/bala-2305/pyauto"
